Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.14.1
-
Fix Version/s: 5.14.2, 5.15.0 Alpha
-
Component/s: QML: Declarative and Javascript Engine
-
Labels:None
-
Commits:4e15f2135cdbefd9999a17d4e4fff5ea93679fac (qt/qtdeclarative/5.14)
Description
I'm trying to fix the Binding restoreMode warning introduced in 5.14. I added
QtQml 2.14
to the top of my imports, but I still get an error:
05:51:691 QQmlApplicationEngine failed to load component 05:51:691 qrc:/qml/main.qml:264:13: Type Ui.SwatchPanel unavailable 05:51:691 qrc:/qml/ui/SwatchPanel.qml:100:25: "Binding.restoreMode" is not available in QtQuick 2.14.
Moving the QtQml import below the QtQuick one fixes it, but shouldn't be necessary.
Attachments
Issue Links
- relates to
-
QTBUG-89295 qmlformat breaks QtQml import
-
- Closed
-
- resulted from
-
QTBUG-78566 Binding QML Type does not warn on qt.qml.binding.removal
-
- Closed
-
For Gerrit Dashboard: QTBUG-81787 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
288950,3 | Clarify the Binding.restoreMode warning message | 5.14 | qt/qtdeclarative | Status: MERGED | +2 | 0 |