src/qml/types/qqmlbind.cpp
@@ -484,9 +484,11 @@ void QQmlBind::eval()
                     d->clearPrev();
                 } else if (!d->restoreModeExplicit) {
                     qmlWarning(this)
-                            << "Not restoring previous value because restoreMode has not been set."
-                            << "This behavior is deprecated."
-                            << "In Qt < 6.0 the default is Binding.RestoreBinding."
+                            << "Not restoring previous value because restoreMode has not been set.\n"
+                            << "This behavior is deprecated.\n"
+                            << "You have to import QtQml 2.14 after any QtQuick imports and set\n"
+                            << "the restoreMode of the binding to fix this warning.\n"
+                            << "In Qt < 6.0 the default is Binding.RestoreBinding.\n"
                             << "In Qt >= 6.0 the default is Binding.RestoreBindingOrValue.";
                 }
             } else if (d->prevIsVariant) {
@@ -495,10 +497,12 @@ void QQmlBind::eval()
                     d->clearPrev();
                 } else if (!d->restoreModeExplicit) {
                     qmlWarning(this)
-                            << "Not restoring previous value because restoreMode has not been set."
-                            << "This behavior is deprecated."
-                            << "In Qt < 6.0 the default is Binding.RestoreBinding."
-                            << "In Qt >= 6.0 the default is Binding.RestoreBindingOrValue.";
+                            << "Not restoring previous value because restoreMode has not been set.\n"
+                            << "This behavior is deprecated.\n"
+                            << "You have to import QtQml 2.14 after any QtQuick imports and set\n"
+                            << "the restoreMode of the binding to fix this warning.\n"
+                            << "In Qt < 6.0 the default is Binding.RestoreBinding.\n"
+                            << "In Qt >= 6.0 the default is Binding.RestoreBindingOrValue.\n";
                 }
             }
             return;
